--- a/Proyecto 2/backend/package.json
+++ b/Proyecto 2/backend/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonschema": "^1.2.6",
     "mosca": "^2.8.3",
