--- a/Proyecto 2/backend/package.json
+++ b/Proyecto 2/backend/package.json
@@ -1,26 +1,18 @@
 {
-  "name": "proyecto-2",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "Proyectos IoT utilizando Arduino\r Grupo 8\r | Carnet | Nombre |\r |----------|----------|\r | 202109715   | Pablo Josué Barahona Luncey   |\r | 202100101    | Ryan José Rodrigo Sigüenza Huertas  |\r | 202110773   | Joshua David Osorio Tally  |\r | 202100154   | Sergio André Lima Corado  |\r | 201807253  | Brian Josué Erazo Sagastume  |",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/index.js",
-    "dev": "nodemon"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^3.0.1",
-    "typescript": "^5.2.2"
-  },
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
     "jsonschema": "^1.2.6",
     "mosca": "^2.8.3",
-    "mqtt": "^5.0.5",
+    "mqtt": "^5.1.0",
     "serialport": "^12.0.0"
   }
 }
