--- a/Proyecto 2/backend/package.json
+++ b/Proyecto 2/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "jsonschema": "^1.2.6",
     "mosca": "^2.8.3",
     "mqtt": "^5.1.1",
