--- a/Proyecto 2/backend/package.json
+++ b/Proyecto 2/backend/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
     "jsonschema": "^1.2.6",
     "mosca": "^2.8.3",
     "mqtt": "^5.1.1",
