--- a/Proyecto 2/backend/package.json
+++ b/Proyecto 2/backend/package.json
@@ -17,6 +17,8 @@
     "mosca": "^2.8.3",
     "mqtt": "^5.1.1",
     "mysql": "^2.18.1",
+    "node-notifier": "^10.0.1",
+    "node-popup": "^0.1.14",
     "serialport": "^12.0.0"
   }
 }
